--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>י״ז בתמוז תשפ״ד</title>
 
     <script src="index.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,7 +24,6 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            overflow: hidden;
             margin: 0;
         }
 
