Update title and event date in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>י״ז בתמוז תשפ״ד</title>
+    <title>עשרה בטבת תשפ״ו</title>
 
     <script src="index.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -151,7 +151,7 @@
         עוד כמה זמן אפשר לאכול? 🙈
     </h1>
     <h4>
-        צום י״ז בתמוז תשפ״ד, לאופק תל אביב ☕️
+        צום עשרה בטבת תשפ״ו, לאופק תל אביב ☕️
     </h4>
 
     <div id="countdown">
@@ -181,7 +181,7 @@
     <script>
         const now = new Date();
         init(
-            now.setHours(20, 6),
+            now.setHours(17, 5),
             false
         )
 
